Creado mediante Colaboratory

--- a/Simulacion/03_TeoriaDeFilas.ipynb
+++ b/Simulacion/03_TeoriaDeFilas.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/desarrollo/Simulacion/02_TeoriaDeFilas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/desarrollo/Simulacion/03_TeoriaDeFilas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -50,15 +50,8 @@
         "id": "oNV6AcCP_YEJ"
       },
       "source": [
-        "##**Introducción**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "G5evWcwGAP7J"
-      },
-      "source": [
+        "# Introducción\n",
+        "\n",
         "Frecuentemente en el estudio de fenómenos naturales o sociales, se presentan situaciones en las cuales se agrupan elementos en formas de linea en espera de ser atendidos o procesados.\n",
         "\n",
         "También con mucha frecuencia es de importancia tratar de averiguar mediante una simulación cual sera el patrón de espera para ser atendido o procesado, cuanto tiempo tardara un individuo en completar una labor o cuanto tiempo tomará completar una determinada labor.\n",
@@ -67,153 +60,9 @@
         "\n",
         "En nuestro curso esto es de relevancia ya que la parte teórica ayuda al momento de entender el funcionamiento de un sistema complejo, como lo pude ser todo aquel en el que intervienen varios individuos o procesos y por otro lado mediante algún lenguaje de programación podemos realizar la simulación que corrobore el análisis teórico.\n",
         "\n",
-        "En materias como **Investigación de Operaciones** o **Programación Lineal** se profundiza en conceptos importantes al tratar de optimizar el desempeño de un sistema complejo, pero para nuestro curso será que suficiente conocer los elementos básicos de la teoría de filas."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bxdhicnyDpYj"
-      },
-      "source": [
-        "### Tipos de Simulaciones\n",
+        "En materias como **Investigación de Operaciones** o **Programación Lineal** se profundiza en conceptos importantes al tratar de optimizar el desempeño de un sistema complejo, pero para nuestro curso será que suficiente conocer los elementos básicos de la teoría de filas.\n",
         "\n",
-        "Actualmente existen básicamente 2 tipos de simulaciones. La primera de ellas son las simulaciones basadas en $\\color{blue}{modelos\\ matem\\acute{a}ticos\\ complejos}$ que incorporan el uso de ecuaciones diferenciales, sistemas de ecuaciones o integrales para describir el comportamiento de un fenómeno, este tipo de simulaciones se estudian en materias como $\\color{blue}{an\\acute{a}lisis\\ num\\acute{e}rico}$ o $\\color{blue}{modelaci\\acute{o}n\\ matem\\acute{a}tica}$.\n",
-        "\n",
-        "El otro tipo de simulaciones son las $\\color{blue}{simulaciones\\ basadas\\ en\\ agentes}$ (antes autómatas celulares). En este tipo de simulaciones, la idea principal es tratar de determinar las $\\color{blue}{interacciones\\ locales\\ entre\\ los\\ individuos}$ que conforman el sistema, para poder determinar cual sera el comportamiento del sistema en el paso siguiente de tiempo.\n",
-        "\n",
-        " \n",
-        "\n",
-        "Sin importar el tipo de simulación la forma en la que esta debe ser construida no cambia mucho."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "NPDBQS6oENvA"
-      },
-      "source": [
-        "El algoritmo general seria el siguiente. \n",
-        "\n",
-        "1. Se observa un fenómeno de interés.\n",
-        "\n",
-        "2. Se genera un modelo matemático (ya sea complejo o basado en agentes).\n",
-        "\n",
-        "3. Se construye el correspondiente modelo computacional.\n",
-        "\n",
-        "4. Finalmente se procede a $\\color{blue}{calibrar}$ y probar la $\\color{blue}{simulaci\\acute{o}n}$.\n",
-        "\n",
-        "Vale la pena aclarar que siempre que sea posible obtener la solución del problema planteado, de manera analítica es preferible seguir este camino, ya que es el camino que mayor exactitud y confiabilidad ofrece."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "8pEJl6Am66UV"
-      },
-      "source": [
-        "###Modelos Matemáticos\n",
-        "\n",
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/regla90.png?raw=1\" width=\"600\"> \n",
-        "\n",
-        "Figura 1: A.C. Regla 90\n",
-        "</center>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ztYiVdpk7Rs3"
-      },
-      "source": [
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/juegovida.png?raw=1\" width=\"600\"> \n",
-        "\n",
-        "Figura 2: Juego de la vida\n",
-        "</center>\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "XabTDU8-7beQ"
-      },
-      "source": [
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/trafico.png?raw=1\" width=\"600\"> \n",
-        "\n",
-        "Figura 3: Trafico Vehicular\n",
-        "</center>\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "GR7XLZNf7oIc"
-      },
-      "source": [
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/lluvia.png?raw=1\" width=\"600\"> \n",
-        "\n",
-        "Figura 4: Modelo Pluvial\n",
-        "</center>\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "fmn6jimk82HP"
-      },
-      "source": [
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/Simulaciondeyacimientos.png?raw=1\" width=\"600\"> \n",
-        "</center>\n",
-        "\n",
-        "$$\\frac{\\delta}{\\delta t}\\left(\\frac{\\Phi S_{w}}{B_{w}}\\right)=\\nabla\\cdot\\left(T_{w}\\left[\\nabla p_{w}-\\rho_{w}\\vec{g}\\right]\\right)+\\frac{qWs}{B_{w}}$$\n",
-        "$$\\frac{\\delta}{\\delta t}\\left(\\frac{\\Phi S_{o}}{B_{o}}\\right)=\\nabla\\cdot\\left(T_{o}\\left[\\nabla p_{o}-\\rho_{o}\\vec{g}\\right]\\right)+\\frac{qOs}{B_{o}}$$\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "lUSM4Vd18-4Z"
-      },
-      "source": [
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/DinamicadeFluidos.png?raw=1\" width=\"600\"> \n",
-        "</center>\n",
-        "\n",
-        "$$\\frac{\\delta\\rho}{\\delta t}+\\frac{\\delta}{\\delta x_{j}}\\left[\\rho u_{j}\\right]=0$$\n",
-        "$$\\frac{\\delta}{\\delta t}\\left(\\rho u_{i}\\right)+\\frac{\\delta}{\\delta x_{j}}\\left[\\rho u_{i}u_{j}+p\\delta_{ij}-\\tau_{ji}\\right]=0,\\quad i=1,2,3$$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "wzBOA1Ps9NyB"
-      },
-      "source": [
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/AnalisisEstructural.png?raw=1\" width=\"600\"> \n",
-        "</center>\n",
-        "\n",
-        "$$\\nabla\\cdot\\sigma+F=\\rho\\frac{\\delta^{2}u}{\\delta t^{2}}$$ $$\\varepsilon=\\frac{1}{2}\\left[\\nabla u+\\left(\\nabla u\\right)\\right]$$\n",
-        "$$\\sigma=C:\\varepsilon$$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Z3ilveJI9WwH"
-      },
-      "source": [
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/EquilibrioEconomico.png?raw=1\" width=\"600\"> \n",
-        "</center>\n",
-        "\n",
-        "$$\\delta x=\\delta B-5x\\,\\delta t$$"
+        "Las filas aparecen frecuentemete en muchas situaciones como un banco, un hospital, un concierto, etc. Así que es importante dedicar un poco de tiempo a su análisis."
       ]
     },
     {
@@ -222,7 +71,9 @@
         "id": "-keLhgR0_dQB"
       },
       "source": [
-        "##**Autómatas Celulares (modelos basados en agentes)**"
+        "# Características importantes \n",
+        "\n",
+        "En general a nadie le gusta esperar, cuando la paciencia llega a su limite la gente decide irse a otro lugar, sin embargo un servicio muy rápido tendría un costo muy elevado, así que la idea es encontrar un balance entre ambos."
       ]
     },
     {
@@ -231,15 +82,55 @@
         "id": "DlcBwdOtH2bm"
       },
       "source": [
-        "### Introducción\n",
+        "# Notación básica\n",
         "\n",
-        "Un autómata celular es un modelo matemático que, basado en las interacciones locales permite mostrar la evolución de un sistema dinámico que avanza a pasos discretos de tiempo. \n",
+        "Con el paso del tiempo se ha implantado una notación para representar los problemas de filas que consta de 5 símbolos separados por barras.\n",
         "\n",
-        "Existe diferentes científicos que han aportado en gran medida a lo que hoy se conoce como autómata celular (A.C.), sin embargo se puede decir que la persona responsable de la definición de A.C. fue $\\color{blue}{John\\ von\\ Neumann}$.\n",
+        "$$A / B / X /Y / Z$$\n",
         "\n",
-        "Por otro lado $\\color{blue}{Stephen\\ Wolfram}$ llevo a un nuevo nivel la definición de A.C. ya que el los clasifico y realizo múltiples investigaciones muy importantes al respecto.\n",
+        "*   $A$: indica la distribución de tiempo entre llegadas consecutivas.\n",
+        "*   $B$: alude al patrón de servicio de servidores.\n",
+        "*   $X$: es el número de canales de servicio.\n",
+        "*   $Y$: es la restricción en la capacidad del sistema,\n",
+        "*   $Z$: es la disciplina de cola.\n",
         "\n",
-        "Dicho sea de paso Stephen Wolfram es el creador de $\\color{blue}{Wolfram\\ Alpha}$, gran aliado y salvador de todo estudiante de la Facultad de Ciencias. "
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/patrones.png?raw=1\" width=\"800\"> \n",
+        "</center>\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4nP0mqyQixXl"
+      },
+      "source": [
+        "# Atención de procesos\n",
+        "\n",
+        "El tiempo que transcurre entre 2 llegadas consecutivas de clientes o el tiempo que tarda en ser atendido un cliente pueden ser muy variados.\n",
+        "\n",
+        "A este tiempo se le conoce como tiempo entre llegadas y tiempo entre servicios.\n",
+        "\n",
+        "El número esperado de llegadas por unidad de tiempo se conoce como tasa media de llegadas.\n",
+        "Y el numero de servicios por unidad de tiempo se conoce como tasa media de servicios.\n",
+        "\n",
+        "La primer forma de distribuir los tiempos de llegada y de servicio se conoce como \"Distribución exponencial\".\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/exponencial.png?raw=1\" width=\"800\"> \n",
+        "</center>\n",
+        "\n",
+        "La segunda forma más común de distribución, es la \"Distribución de Poisson\".\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/poisson.png?raw=1\" width=\"500\"> \n",
+        "</center>\n",
+        "\n",
+        "Para $k = 0,1,2,3,.....$ Donde:\n",
+        "*   $P(k) =$ Probabilidad de $k$ arribos/servicios.\n",
+        "*   $k =$ Número de arrivos/servicios por unidad de tiempo\n",
+        "*   $\\lambda =$ Tasa promedio de arrivos/servicios por unidad de tiempo.\n"
       ]
     },
     {
@@ -248,17 +139,22 @@
         "id": "6ADj4drtIRWL"
       },
       "source": [
-        "### Descripción\n",
+        "# Ejemplos\n",
         "\n",
-        "No se tiene como tal una definición matemática formal de lo que es un A.C., pero podemos pensar en el mismo como una tupla, es decir un conjunto de elementos ordenados\n",
+        "A continuación veremos algunos ejemplos de modelos de filas."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nip61Z3gk8N4"
+      },
+      "source": [
+        "## Modelo $M/M/1$\n",
         "\n",
-        "* Una rejilla o cuadricula (lattice) de enteros, infinitamente extendida y con dimensión $d\\in\\mathbb{Z^{+}}$. Cada celda es conocida como $\\color{blue}{c\\acute{e}lula}$.\n",
+        "Es un sistema de lineas de espera, con llegadas aleatorias, tiempo de servicio constante, con una linea de servicio y una linea de espera.\n",
         "\n",
-        "* Una célula puede tomar un valor en $\\mathbb{Z}$ a partir de un $\\color{blue}{conjunto\\ finito\\ de\\ estados\\ k}$.\n",
-        "\n",
-        "* Cada célula ademas se caracteriza por su $\\color{blue}{vecindad}$, conjunto finito de células que colindan con la célula en cuestión.\n",
-        "\n",
-        "* La $\\color{blue}{funci\\acute{o}n\\ de\\ transici\\acute{o}n}$, toma el estado actual de la célula y los valores de la vecindad de la célula en cuestión y regresa el nuevo valor de la célula que tendrá en el paso siguiente de tiempo. Esta función se aplica de manera homogénea a todas las células del A.C. por cada paso de tiempo."
+        "Este sistema tiene tiempos de servicio constantes en lugar de exponencialmente distribuidos"
       ]
     },
     {
