Creado mediante Colaboratory

--- a/Simulacion/03_TeoriaDeFilas.ipynb
+++ b/Simulacion/03_TeoriaDeFilas.ipynb
@@ -590,7 +590,7 @@
         "id": "DlcBwdOtH2bm"
       },
       "source": [
-        "# Notación básica\n",
+        "# Notación básica (Kendal)\n",
         "\n",
         "Con el paso del tiempo se ha implantado una notación para representar los problemas de filas que consta de 5 símbolos separados por barras.\n",
         "\n",
@@ -655,10 +655,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "6FcYc9DYuEzM",
-        "outputId": "4abbaba0-d8ff-458f-af5b-138431dd5d59",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4abbaba0-d8ff-458f-af5b-138431dd5d59"
       },
       "source": [
         "import time\n",
@@ -673,7 +673,7 @@
         "  print(\"Un cliente ha sido atendido\")\n",
         "  time.sleep(2)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -715,7 +715,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "low436XPkg4e",
-        "outputId": "b6f8b128-d7e6-4eb0-b417-26fe06b96478",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 404,
@@ -728,7 +727,8 @@
             "5246e20295dd41f782efad67e0b67247",
             "e8aff9a11e86476aae220018c960c138"
           ]
-        }
+        },
+        "outputId": "b6f8b128-d7e6-4eb0-b417-26fe06b96478"
       },
       "source": [
         "import numpy as np\n",
@@ -753,7 +753,7 @@
         "\n",
         "interact(distExponencial, lam=widgets.FloatSlider(min=0.0,max=0.5,step=0.1,value=0.1))\n"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -798,7 +798,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "V_IfvoT3mTcX",
-        "outputId": "dc50571e-f2b9-4cae-e81c-50d647f2c021",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 404,
@@ -811,7 +810,8 @@
             "52bb6be264a8487c93dd26331c6d2b8a",
             "a880b83d7b594b21b20b4f5c4690f296"
           ]
-        }
+        },
+        "outputId": "dc50571e-f2b9-4cae-e81c-50d647f2c021"
       },
       "source": [
         "import numpy as np\n",
@@ -837,7 +837,7 @@
         "\n",
         "interact(distPoisson, lam=widgets.FloatSlider(min=0.0,max=0.5,step=0.1,value=0.1))"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -871,9 +871,9 @@
         "id": "6ADj4drtIRWL"
       },
       "source": [
-        "# Ejemplos\n",
+        "# Modelos\n",
         "\n",
-        "A continuación veremos algunos ejemplos de modelos de filas."
+        "A continuación veremos algunos modelos de sistemas en los que se forman filas."
       ]
     },
     {
@@ -894,7 +894,9 @@
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/dd1.gif?raw=1\" width=\"600\"> \n",
         "</center>\n",
         "\n",
-        "Sin embargo vale la pena preguntarnos ¿que sucede si $\\lambda > \\mu$?, esta situación se muestra a continuación.\n",
+        "Modelos que funcionan de esta forma son por ejemplo las **lineas de ensamblaje**, donde se tienen patrones de llegada y de servicio deterministas y no se forman filas.\n",
+        "\n",
+        "Sin embargo vale la pena preguntarnos ¿qué sucede si $\\lambda > \\mu$?, esta situación se muestra a continuación.\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/dd1espera.gif?raw=1\" width=\"600\"> \n",
@@ -913,129 +915,34 @@
         "id": "0dXUNRxSIzxr"
       },
       "source": [
-        "### Autómata celular elemental (90)\n",
+        "## Modelo $M/M/1$\n",
         "\n",
-        "En suma todos estos elementos permiten mostrar como evoluciona un sistema dinámico, veamos el ejemplo de la regla 90. Se le llama regla 90 dado que la función de transición representa el número 90 en binario\n",
+        "En este modelo tanto el patrón de llegada, como el patró de servicio son de tipo probabilistico y como ya vimos previamente se tienen 2 tipos de distribuciones principalmente.\n",
         "\n",
-        "* Rejilla unidimensional con el numero de células deseadas para el modelo.\n",
-        "\n",
-        "* Conjunto de estados: cada célula puede tomar el valor de \\{0,1\\}.\n",
-        "\n",
-        "* Vecindad: la vecindad de una célula sera la célula anterior y la célula posterior. $\\color{blue}{La\\ frontera\\ es\\ continua}$, es decir que la ultima célula esta conectada con la primera.\n",
-        "\n",
-        "* Función de transición: esta definida de la siguiente manera.\n",
-        "\n",
-        "\\begin{array}{c|c|c|c|c|c|c|c|}\n",
-        "Vecindad & 111 & 110 & 101 & 100 & 011 & 010 & 001 & 000\\\\\n",
-        "\\hline\n",
-        "Paso\\,de\\,tiempo & 0 & 1 & 0 & 1 & 1 & 0 & 1 & 0\n",
-        "\\end{array}"
+        "Volvemos a tener un solo servidor o fila de espera."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vsg3mmHiLJSF"
+        "id": "5B8I8i3qFJ9z"
       },
       "source": [
-        "Veamos como evoluciona este a.c. después de un par de pasos de tiempo\n",
+        "### Ejemplo\n",
         "\n",
-        "* Tiempo 0: \\begin{array}{|c|c|c|c|c|c|c|c|}\n",
-        "\\hline\n",
-        "0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 0\\\\\n",
-        "\\hline\n",
-        "\\end{array} \n",
+        "Sea $\\lambda=100$ personas por hora y $\\mu=20$ personas cada $10$ minutos (es decir $120$ peronas por hora). Tratemos de ver que sucede con el sistema.\n",
         "\n",
-        "* Tiempo 1: \\begin{array}{|c|c|c|c|c|c|c|c|}\n",
-        "\\hline\n",
-        "0 & 0 & 0 & 1 & 0 & 1 & 0 & 0 & 0\\\\\n",
-        "\\hline\n",
-        "\\end{array} \n",
+        "El **número promedio de clientes** que esperan en la fila está dado por:\n",
+        "$$L_{q}=\\frac{\\lambda^{2}}{2\\mu\\left(\\mu-\\lambda\\right)}=\\frac{100^{2}}{2\\left(120\\right)\\left(120-100\\right)}=1.04$$\n",
         "\n",
-        "* Tiempo 2: \\begin{array}{|c|c|c|c|c|c|c|c|}\n",
-        "\\hline\n",
-        "0 & 0 & 1 & 0 & 0 & 0 & 1 & 0 & 0\\\\\n",
-        "\\hline\n",
-        "\\end{array} \n",
+        "El **tiempo promedio de tiempo** que uncliente espera en la fila está dado por:\n",
+        "$$W_{q}=\\frac{\\lambda}{2\\mu\\left(\\mu-\\lambda\\right)}=\\frac{100}{2\\left(120\\right)\\left(120-100\\right)}=0.01\\,horas\\times\\frac{60min}{1hora}=0.6min\\frac{60seg}{1min}=36seg$$\n",
         "\n",
-        "* Tiempo 3: \\begin{array}{|c|c|c|c|c|c|c|c|}\n",
-        "\\hline\n",
-        "0 & 1 & 0 & 0 & 0 & 0 & 0 & 1 & 0\\\\\n",
-        "\\hline\n",
-        "\\end{array} \n",
+        "El **número promedio de clientes en el sistema** que uncliente espera en la fila está dado por:\n",
+        "$$L_{s}=L_{q}+\\frac{\\lambda}{\\mu}=1.04+\\frac{100}{120}=1.87$$\n",
         "\n",
-        "* Tiempo 4: \\begin{array}{|c|c|c|c|c|c|c|c|}\n",
-        "\\hline\n",
-        "1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1\\\\\n",
-        "\\hline\n",
-        "\\end{array} \n",
-        "\n",
-        "* Después de muchos pasos de tiempo se comienza a ver un patrón que se replica en todo la rejilla. Veamos la simulación con NetLogo."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "dxTD9wnIVzAu"
-      },
-      "source": [
-        "### Autómata celular elemental (184)\n",
-        "\n",
-        "Esta regla es la que modela el flujo vehicular empleado en un a.c. elemental de igual manera que el autómata anterior, este toma su nombre del valor en decimal de la función de transición. Los elementos que definen a este a.c. son los mismos que el del autómata anterior:\n",
-        "\n",
-        "* Rejilla unidimensional con el numero de células deseadas para el modelo.\n",
-        "\n",
-        "* Conjunto de estados: cada célula puede tomar el valor de \\{0,1\\}.\n",
-        "\n",
-        "* Vecindad: la vecindad de una célula sera la célula anterior y la célula posterior. La $\\color{blue}{frontera\\ es\\ continua}$, es decir que la ultima célula esta conectada con la primera.\n",
-        "\n",
-        "* Función de transición: esta definida de la siguiente manera.\n",
-        "\\begin{array}{c|c|c|c|c|c|c|c|}\n",
-        "Vecindad &\t111\t&110\t&101\t&100\t&011\t&010\t&001\t&000\\\\\n",
-        "\\hline\n",
-        "Paso\\,de\\,tiempo\t&1\t&0\t&1&\t1&\t1&\t0&\t0&\t0\n",
-        "\\end{array}\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9WkLmlt1WmAA"
-      },
-      "source": [
-        "Veamos como evoluciona este a.c. después de un par de pasos de tiempo\n",
-        "\n",
-        "* Tiempo 0: \\begin{array}{|c|c|c|c|c|c|c|}\n",
-        "\\hline\n",
-        "1 & 0 & 0 & 1 & 0 & 1 & 0 & 0\\\\\n",
-        "\\hline\n",
-        "\\end{array} \n",
-        "\n",
-        "* Tiempo 1: \\begin{array}{|c|c|c|c|c|c|c|}\n",
-        "\\hline\n",
-        "0 & 1 & 0 & 0 & 1 & 0 & 1 & 0\\\\\n",
-        "\\hline\n",
-        "\\end{array} \n",
-        "\n",
-        "* Tiempo 2: \\begin{array}{|c|c|c|c|c|c|c|}\n",
-        "\\hline\n",
-        "0 & 0 & 1 & 0 & 0 & 1 & 0 & 1\\\\\n",
-        "\\hline\n",
-        "\\end{array} \n",
-        "\n",
-        "* Tiempo 3: \\begin{array}{|c|c|c|c|c|c|c|}\n",
-        "\\hline\n",
-        "1 & 0 & 0 & 1 & 0 & 0 & 1 & 0\\\\\n",
-        "\\hline\n",
-        "\\end{array} \n",
-        "\n",
-        "* Tiempo 4: \\begin{array}{|c|c|c|c|c|c|c|c|}\n",
-        "\\hline\n",
-        "0 & 1 & 0 & 0 & 1 & 0 & 1 & 0\\\\\n",
-        "\\hline\n",
-        "\\end{array} \n",
-        "\n",
-        "* Como pueden notar, después de un cierto numero de pasos de tiempo (y dadas las condiciones iniciales) se repite el patrón que muestra el a.c. "
+        "El **tiempo promedio que los clientes estan en el sistema** que uncliente espera en la fila está dado por:\n",
+        "$$W_{s}=W_{q}+\\frac{1}{\\mu}=0.01+\\frac{100}{120}=0.02horas\\times\\frac{60min}{1hora}=1.2min\\times\\frac{60seg}{1min}=72seg$$"
       ]
     },
     {
@@ -1044,54 +951,79 @@
         "id": "gda37kOR__z-"
       },
       "source": [
-        "## **Simulación de Probabilidades**"
+        "# Otros Modelos\n",
+        "\n",
+        "Existen muchas variantes de modelos en los que se forman filas."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YKARvL06XoZ_"
+        "id": "f26aTCPoLvbO"
       },
       "source": [
-        "### Introducción\n",
+        "## Una fila multiples servidores\n",
         "\n",
-        "En gran parte de las simulaciones que se pueden generar, incluir $\\color{blue}{procesos\\ estoc\\acute{a}sticos}$ es de vital importancia ya que así es como se logran modelar fenómenos de interés, como lo seria el que al lanzar una moneda se obtenga una cara un otra. \n",
-        "\n",
-        "Los $\\color{blue}{m\\acute{e}todos\\ de\\ Montecarlo}$, son métodos que han probado ser altamente efectivos y estos se basan en la idea de generar un muestreo aleatorio uniformemente distribuido. \n",
-        "\n",
-        "Dado que las simulaciones se realizan empleando una computadora, los valores aleatorios que se tienen que generar también se calculan dentro de la computadora. \n",
-        "\n",
-        "Sin embargo ya que los recursos de una computadora son finitos, los valores aleatorios que se pueden generar en realidad están $\\color{blue}{acotados\\ por\\ las\\ limitaciones\\ de\\ la\\ computadora}$ donde se generen estos valores. Es por esta razón que se conocen como valores $\\color{blue}{pseudoaleatorios}$."
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/unfms.png?raw=1\" width=\"600\"> \n",
+        "</center> "
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WLQl-XhAX6NS"
+        "id": "FSdH-9zzNIoA"
       },
       "source": [
-        "### Creación de valores aleatorios\n",
+        "## Varias filas multiples servidores\n",
         "\n",
-        "La mayoría de los lenguajes de programación actuales ya cuentan con una amplia biblioteca de herramientas para generar valores pseudoaleatorios, la forma en la que se generan estos valores normalmente es la siguiente:\n",
-        "\n",
-        "* Se invoca una función o método que recibe como parámetro una semilla ($\\color{green}{seed}$).\n",
-        "\n",
-        "* Esta semilla tiene la finalidad de ayudar a generar estos valores pseudoaleatorios.\n",
-        "\n",
-        "* Opcionalmente se puede indicar el rango en el cual se requiere el valor pseudoaleatorio.\n",
-        "\n",
-        "* Se genera el valor pseudoaleatorio.\n",
-        "\n",
-        "* Por ultimo se emplea este valor en el proceso estocástico en cuestión y se procede a generar el siguiente."
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/vfvm.png?raw=1\" width=\"600\"> \n",
+        "</center> "
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ji8-7FzsAFA-"
+        "id": "V7KWZj-TNPF3"
       },
       "source": [
-        "## **Apendice**"
+        "## Una filas varios servidores\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/ufvs.png?raw=1\" width=\"600\"> \n",
+        "</center> "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sNjKU2teNllh"
+      },
+      "source": [
+        "# Costo-Calidad\n",
+        "\n",
+        "La finalidad de la teoría de filas y su simulación es encontrar un equilibro para el **costo-calidad** en un sistema.\n",
+        "\n",
+        "*   **Costos en la fila**: el costo en la fila del sistema el tiempo que el cliente (proceso) pierde esperando a ser atendido. Un sistema con un **bajo costo** es la finalidad de todo modelo de fila. \n",
+        "*   **Costos de servicio**: es el costo de operación por servicio, uno de los objetivos de la teoría de filas es, **mantener el costo total mínimo y maximizar el número de clientes atendidos**.\n",
+        "\n",
+        "Otros objetivos del análizis de un sistema son:\n",
+        "\n",
+        "*   Identificar el **nivel óptimo de capacidad del sistema, que minimiza el coste del mismo**.\n",
+        "*   Evaluar el impacto que las posibles alternativas de modificación de la capacidad del sistema tendrían en el coste total del mismo.\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "279Ou6b6OhAE"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -1100,14 +1032,11 @@
         "id": "r50CSgntYI27"
       },
       "source": [
-        "### Referencias\n",
+        "# Referencias\n",
         "\n",
         "* Thomas H. Cormen: Introduction to Algorithms.\n",
-        "\n",
         "* Libro Web: Introduccion a Python.\n",
-        "\n",
         "* Daniel T. Joyce: Object-Oriented Data Structures.\n",
-        "\n",
         "* John C. Mitchell: Concepts in programing Languages."
       ]
     }
