Creado mediante Colaboratory

--- a/Simulacion/02_SimulacionProbabilidad.ipynb
+++ b/Simulacion/02_SimulacionProbabilidad.ipynb
@@ -817,7 +817,7 @@
         "\n",
         "interact(Rectangulo,n=widgets.IntSlider(min=1,max=30,step=1,value=1))"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1414,6 +1414,7 @@
       "source": [
         "# Referencias\n",
         "\n",
+        "*   [Teorema Fundamental de Monte Carlo](https://www.ugr.es/~jillana/Docencia/FM/mc.pdf).\n",
         "* Thomas H. Cormen: Introduction to Algorithms.\n",
         "* Libro Web: Introduccion a Python.\n",
         "* Daniel T. Joyce: Object-Oriented Data Structures.\n",
