Creado mediante Colaboratory

--- a/Simulacion/03_TeoriaDeFilas.ipynb
+++ b/Simulacion/03_TeoriaDeFilas.ipynb
@@ -939,13 +939,13 @@
         "El **número promedio de clientes** que esperan en la fila está dado por:\n",
         "$$L_{q}=\\frac{\\lambda^{2}}{2\\mu\\left(\\mu-\\lambda\\right)}=\\frac{100^{2}}{2\\left(120\\right)\\left(120-100\\right)}=1.04$$\n",
         "\n",
-        "El **tiempo promedio de tiempo** que uncliente espera en la fila está dado por:\n",
+        "El **tiempo promedio** que uncliente espera en la fila está dado por:\n",
         "$$W_{q}=\\frac{\\lambda}{2\\mu\\left(\\mu-\\lambda\\right)}=\\frac{100}{2\\left(120\\right)\\left(120-100\\right)}=0.01\\,horas\\times\\frac{60min}{1hora}=0.6min\\frac{60seg}{1min}=36seg$$\n",
         "\n",
-        "El **número promedio de clientes en el sistema** que uncliente espera en la fila está dado por:\n",
+        "El **número promedio de clientes en el sistema** está dado por:\n",
         "$$L_{s}=L_{q}+\\frac{\\lambda}{\\mu}=1.04+\\frac{100}{120}=1.87$$\n",
         "\n",
-        "El **tiempo promedio que los clientes estan en el sistema** que uncliente espera en la fila está dado por:\n",
+        "El **tiempo promedio que los clientes estan en el sistema**:\n",
         "$$W_{s}=W_{q}+\\frac{1}{\\mu}=0.01+\\frac{100}{120}=0.02horas\\times\\frac{60min}{1hora}=1.2min\\times\\frac{60seg}{1min}=72seg$$"
       ]
     },
