Creado mediante Colaboratory

--- a/Simulacion/03_TeoriaDeFilas.ipynb
+++ b/Simulacion/03_TeoriaDeFilas.ipynb
@@ -1017,8 +1017,9 @@
         "*   Identificar el **nivel óptimo de capacidad del sistema, que minimiza el coste del mismo**.\n",
         "*   Evaluar el impacto que las posibles alternativas de modificación de la capacidad del sistema tendrían en el coste total del mismo.\n",
         "\n",
-        "\n",
-        "\n"
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Simulacion/mapacon.png?raw=1\" width=\"900\"> \n",
+        "</center> "
       ]
     },
     {
@@ -1027,7 +1028,21 @@
         "id": "279Ou6b6OhAE"
       },
       "source": [
-        ""
+        "# Ejercicio\n",
+        "\n",
+        "Supongamos que en una estación con un solo servidor llegan en promedio 45 clientes por hora.\n",
+        "\n",
+        "Se tiene capacidad para atender en promedio 60 clientes por hora.\n",
+        "\n",
+        "Se sabe que los clientes esperan en promedio 3 minutos en la fila.\n",
+        "\n",
+        "Responde las siguientes preguntas:\n",
+        "\n",
+        "*   ¿Cuál es el tiempo promedio que un cliente pasa en el sistema?\n",
+        "*   ¿Cuál es número promedio de clientes en la fila?\n",
+        "*   ¿Cuál es el número promedio de cliente en el sistema?\n",
+        "*   ¿Qué tipo de modelo es este?\n",
+        "\n"
       ]
     },
     {
@@ -1038,8 +1053,8 @@
       "source": [
         "# Referencias\n",
         "\n",
-        "* Thomas H. Cormen: Introduction to Algorithms.\n",
-        "* Libro Web: Introduccion a Python.\n",
+        "* [Modelos de filas](https://www.um.es/or/ampliacion/node7.html).\n",
+        "* [Teoría de Colas](https://hopelchen.tecnm.mx/principal/sylabus/fpdb/recursos/r89798.PDF).\n",
         "* Daniel T. Joyce: Object-Oriented Data Structures.\n",
         "* John C. Mitchell: Concepts in programing Languages."
       ]
