Creado mediante Colaboratory

--- a/Simulacion/03_TeoriaDeFilas.ipynb
+++ b/Simulacion/03_TeoriaDeFilas.ipynb
@@ -594,7 +594,7 @@
         "id": "DlcBwdOtH2bm"
       },
       "source": [
-        "# Notación básica (Kendal)\n",
+        "# Notación básica (Kendall)\n",
         "\n",
         "Con el paso del tiempo se ha implantado una notación para representar los problemas de filas que consta de 5 símbolos separados por barras.\n",
         "\n",
@@ -1055,8 +1055,11 @@
         "\n",
         "* [Modelos de filas](https://www.um.es/or/ampliacion/node7.html).\n",
         "* [Teoría de Colas](https://hopelchen.tecnm.mx/principal/sylabus/fpdb/recursos/r89798.PDF).\n",
-        "* Daniel T. Joyce: Object-Oriented Data Structures.\n",
-        "* John C. Mitchell: Concepts in programing Languages."
+        "* [Teoría de filas](https://www.ecured.cu/Teor%C3%ADa_de_colas).\n",
+        "* [Notación Kendall.](http://www.lcc.uma.es/~ezeqlr/ios/Tema5.pdf)\n",
+        "* [Invesigación operativa.](https://idus.us.es/bitstream/handle/11441/77595/Esteban%20Vel%C3%A1zquez%20Gabriel%20TFG.pdf?sequence=1)\n",
+        "\n",
+        "\n"
       ]
     }
   ]
