Creado mediante Colaboratory

--- a/Simulacion/03_TeoriaDeFilas.ipynb
+++ b/Simulacion/03_TeoriaDeFilas.ipynb
@@ -921,7 +921,7 @@
       "source": [
         "## Modelo $M/M/1$\n",
         "\n",
-        "En este modelo tanto el patrón de llegada, como el patró de servicio son de tipo probabilistico y como ya vimos previamente se tienen 2 tipos de distribuciones principalmente.\n",
+        "En este modelo tanto el patrón de llegada, como el patrón de servicio son de tipo probabilistico y como ya vimos previamente se tienen 2 tipos de distribuciones principalmente.\n",
         "\n",
         "Volvemos a tener un solo servidor o fila de espera."
       ]
@@ -934,7 +934,7 @@
       "source": [
         "### Ejemplo\n",
         "\n",
-        "Sea $\\lambda=100$ personas por hora y $\\mu=20$ personas cada $10$ minutos (es decir $120$ peronas por hora). Tratemos de ver que sucede con el sistema.\n",
+        "Sea $\\lambda=100$ personas por hora y $\\mu=20$ personas atendidas cada $10$ minutos (es decir $120$ peronas por hora). Tratemos de ver que sucede con el sistema.\n",
         "\n",
         "El **número promedio de clientes** que esperan en la fila está dado por:\n",
         "$$L_{q}=\\frac{\\lambda^{2}}{2\\mu\\left(\\mu-\\lambda\\right)}=\\frac{100^{2}}{2\\left(120\\right)\\left(120-100\\right)}=1.04$$\n",
