Creado mediante Colaboratory

--- a/Simulacion/03_TeoriaDeFilas.ipynb
+++ b/Simulacion/03_TeoriaDeFilas.ipynb
@@ -1009,10 +1009,10 @@
         "\n",
         "La finalidad de la teoría de filas y su simulación es encontrar un equilibro para el **costo-calidad** en un sistema.\n",
         "\n",
-        "*   **Costos en la fila**: el costo en la fila del sistema el tiempo que el cliente (proceso) pierde esperando a ser atendido. Un sistema con un **bajo costo** es la finalidad de todo modelo de fila. \n",
+        "*   **Costos en la fila**: el costo en la fila del sistema es el tiempo que el cliente (proceso) pierde esperando a ser atendido. Un sistema con un **bajo costo** es la finalidad de todo modelo de fila. \n",
         "*   **Costos de servicio**: es el costo de operación por servicio, uno de los objetivos de la teoría de filas es, **mantener el costo total mínimo y maximizar el número de clientes atendidos**.\n",
         "\n",
-        "Otros objetivos del análizis de un sistema son:\n",
+        "Otros objetivos del análisis de un sistema son:\n",
         "\n",
         "*   Identificar el **nivel óptimo de capacidad del sistema, que minimiza el coste del mismo**.\n",
         "*   Evaluar el impacto que las posibles alternativas de modificación de la capacidad del sistema tendrían en el coste total del mismo.\n",
